infrastructure/deploy/services/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  labels:
    app: ${SERVICE_NAME}
    version: ${VERSION}
    date: ${DATE}
spec:
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
        version: ${VERSION}
    spec:
      containers:
        - name: ${SERVICE_NAME}
          image: ${IMAGE}
          ports:
            - name: grpc
              containerPort: 50051
