infrastructure/deploy/services/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
spec:
  ports:
    - name: grpc-50051
      port: 50051
      targetPort: 50051
  selector:
    app: ${SERVICE_NAME}
