infrastructure/deploy/services/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${SERVICE_NAME}-grpc
spec:
  hosts:
    - "*"
  gateways:
    - dynamicloading-gateway
  http:
    - match:
        - uri:
            prefix: /${SERVICE_NAME}.InternalService
      route:
        - destination:
            host: ${SERVICE_NAME}
            subset: ${VERSION}
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${SERVICE_NAME}
spec:
  host: ${SERVICE_NAME}
  subsets:
    - name: ${VERSION}
      labels:
        version: ${VERSION}
